--- a/css/formulaire.css
+++ b/css/formulaire.css
@@ -3,7 +3,6 @@
 body {
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
 }
 
 .left {
@@ -176,27 +175,29 @@ body {
     transform: translate(-50%, -50%);
     width: 100%;
     display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
-.right .desc .slogan .play-svg {
-    position: absolute;
-    top: 50%;
-    left: 10%;
-    transform: translateY(-50%);
-    width: 70px;
+.right .desc .slogan .slog-item {
+    margin: auto;
+    display: flex;
+    width: 50%;
+    align-items: center;
+    gap: 30px;
+}
+
+.right .desc .slogan .slog-item .play-svg {
+    width: 50px;
     height: auto;
     fill: white;
-    vertical-align: middle;
+    vertical-align: bottom;
 }
 
-.right .desc .slogan h1 {
-    position: absolute;
-    top: 50%;
-    left: 55%;
-    transform: translate(-50%, -50%);
+.right .desc .slogan .slog-item h1 {
     color: white;
-}
+} 
 
-.right .desc .slogan h1 span {
+.right .desc .slogan .slog-item h1 span {
     color: black;
 }
