--- a/css/panel.css
+++ b/css/panel.css
@@ -1,7 +1,35 @@
 @import url('initialisations.css');
 
+* {
+
+}
+
 body {
     margin: 0 auto;
     display: flex;
     background-color: var(--c-background);
+}
+
+.global {
+    margin: 0 auto;
+    margin-left: 300px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    padding: 1rem;
+}
+
+
+
+
+
+@media screen and (max-width:1085px) {
+    
+}
+
+@media screen and (max-width:950px) {
+    .global {
+        margin-left: 100px;
+    }
 }
