--- a/css/panel.css
+++ b/css/panel.css
@@ -18,6 +18,7 @@ body {
     width: 100%;
     height: auto;
     padding: 1rem;
+    transition: all 0.3s ease-in-out;
 }
 
 
@@ -31,5 +32,6 @@ body {
 @media screen and (max-width:950px) {
     .global {
         margin-left: 100px;
+        transition: all 0.3s ease-in-out;
     }
 }
