--- a/css/panel.css
+++ b/css/panel.css
@@ -40,7 +40,7 @@ body {
 }
 
 .barre-recherche form.search .div .barre {
-    width: 300px;
+    width: 500px;
     height: 55px;
     background: #FFFFFF;
     padding: 20px;
@@ -59,26 +59,26 @@ body {
     color: var(--c-grey);
 }
 
-.barre-recherche form.search .btn-search {
-    width: 100%;
-    max-width: 180px;
-    height: 55px;
+.barre-recherche form.search .div .btn-search {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    width: 40px;
+    height: 40px;
     background: var(--c-blue);
-    box-shadow: 5px 5px 20px rgba(50, 70, 211, 0.4);
-    border-radius: 10px;
-    padding: 5px;
-    border: none;
-    outline: none;
-    color: white;
-    font-weight: 600;
-    font-size: 15px;
     cursor: pointer;
     transition: all 0.3s ease;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    color: white;
+    font-size: 25px;
 }
 
 
 .barre-recherche form.search .btn-search:hover {
-    box-shadow: none;
+    background-color: var(--c-dark-blue);
     transition: all 0.3s ease;
 }
 
