--- a/css/panel.css
+++ b/css/panel.css
@@ -16,9 +16,8 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: auto;
+    min-height: 100vh;
     padding: 1rem;
-    transition: all 0.3s ease-in-out;
 }
 
 .barre-recherche {
@@ -50,6 +49,10 @@ body {
     outline: none;
     border: none;
 }
+.barre-recherche form.search .div .barre:focus {
+    outline: solid 2px var(--c-blue);
+}
+
 
 .barre-recherche form.search .div .icon {
     position: absolute;
@@ -138,7 +141,6 @@ body {
     margin: 20px auto 0;
     display: flex;
     flex-direction: column;
-    padding: 1rem;
     width: 100%;
 }
 
@@ -149,9 +151,9 @@ body {
 .dossiers .cards {
     display: flex;
     width: 100%;
+    max-width: 1600px;
     flex-wrap: wrap;
     gap: 20px;
-    justify-content: flex-start;
 }
 
 .card {
@@ -224,7 +226,6 @@ body {
 
 .add {
     display: flex;
-    width: 100%;
     border: 3px dashed #3246D3;
     background: none;
     align-items: center;
@@ -259,8 +260,8 @@ body {
     }
 }
 
-@media screen and (max-width:800px) {
+/* @media screen and (max-width:800px) {
     .add {
         width: 280px;
     }
-}
+} */
