--- a/css/panel.css
+++ b/css/panel.css
@@ -1,7 +1,9 @@
 @import url('initialisations.css');
 
 * {
-
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -257,6 +259,86 @@ body {
 .card:hover span.menu {
     color: #fff;
 }
+
+
+
+
+
+
+
+.global .ajouts {
+    margin: 30px auto 0;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.global .ajouts .titre {
+    padding: 1rem;
+}
+
+.ajouts .liste-ajouts {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 900px;
+    gap: 15px;
+}
+
+.ajouts .liste-ajouts .ligne {
+    margin: auto;
+    display: flex;
+    width: 100%;
+    min-height: 55px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 5px 5px 20px rgba(153, 153, 153, 0.4);
+}
+
+.ajouts .liste-ajouts .ligne .icone {
+    display: block;
+    width: 200px;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.ajouts .liste-ajouts .ligne .icone img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70%;
+    height: 70%;
+}
+
+.ajouts .liste-ajouts .ligne .titre {
+    width: 100%;
+    margin: auto;
+}
+
+.ajouts .liste-ajouts .ligne .taille {
+    margin: auto;
+    justify-content: center;
+    width: 100%;
+}
+
+.ajouts .liste-ajouts .ligne .date {
+    margin: auto;
+    display: block;
+    width: 100%;
+}
+
+.ajouts .liste-ajouts .ligne .download {
+    width: 100%;
+    background-color: forestgreen;
+}
+
+
+
+
+
+
 
 
 
