--- a/css/pageFolder.css
+++ b/css/pageFolder.css
@@ -11,3 +11,275 @@ body {
     display: flex;
     background-color: var(--c-background);
 }
+
+.global {
+    margin: 0 auto;
+    margin-left: 300px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-height: 100vh;
+    padding: 1rem;
+}
+
+.barre-recherche {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    position: relative;
+}
+
+.barre-recherche form.search {
+    margin: auto;
+    display: flex;
+    width: 100%;
+    gap: 30px;
+}
+
+.barre-recherche form.search .div {
+    position: relative;
+}
+
+.barre-recherche form.search .div .barre {
+    width: 500px;
+    height: 55px;
+    background: #FFFFFF;
+    padding: 20px;
+    padding-left: 50px;
+    box-shadow: 5px 5px 20px rgba(199, 199, 199, 0.4);
+    border-radius: 10px;
+    outline: none;
+    border: none;
+}
+.barre-recherche form.search .div .barre:focus {
+    outline: solid 2px var(--c-blue);
+}
+
+
+.barre-recherche form.search .div .icon {
+    position: absolute;
+    top: 50%;
+    left: 20px;
+    transform: translateY(-50%);
+    color: var(--c-grey);
+}
+
+.barre-recherche form.search .div .btn-search {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    width: 40px;
+    height: 40px;
+    background: var(--c-blue);
+    cursor: pointer;
+    transition: all 0.3s ease;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    color: white;
+    font-size: 25px;
+}
+
+
+.barre-recherche form.search .btn-search:hover {
+    background-color: var(--c-dark-blue);
+    transition: all 0.3s ease;
+}
+
+.barre-recherche .profil {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    padding: 5px;
+    gap: 8px;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.barre-recherche .profil .message {
+    width: 30px;
+    height: 30px;
+    position: relative;
+}
+
+.barre-recherche .profil .message svg {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+}
+
+.barre-recherche .profil .settings {
+    width: 30px;
+    height: 30px;
+    position: relative;
+}
+
+.barre-recherche .profil .settings svg {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+}
+
+.barre-recherche .profil .avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.barre-recherche .profil .avatar img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+    cursor: pointer;
+}
+
+
+.global .ajouts {
+    margin: 30px auto 0;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.global .ajouts .titre {
+    padding: 1rem;
+}
+
+.ajouts .liste-ajouts {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 1300px;
+    gap: 15px;
+}
+
+.ajouts .liste-ajouts .ligne {
+    margin: auto;
+    display: flex;
+    width: 100%;
+    min-height: 55px;
+    background-color: white;
+    border-radius: 10px;
+    gap: 10px;
+    padding: 5px;
+    box-shadow: 5px 5px 20px rgba(153, 153, 153, 0.4);
+}
+
+.ajouts .liste-ajouts .ligne .icone {
+    display: block;
+    width: 40px;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.ajouts .liste-ajouts .ligne .icone img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+}
+
+.ajouts .liste-ajouts .ligne .titre {
+    margin: auto;
+}
+
+.ajouts .liste-ajouts .ligne .taille {
+    margin: auto;
+    display: flex;
+}
+
+.ajouts .liste-ajouts .ligne .date {
+    margin: auto;
+}
+
+.ajouts .liste-ajouts .ligne .download {
+    margin: auto;
+    display: flex;
+    gap: 15px;
+}
+
+.ajouts .liste-ajouts .ligne .download button {
+    width: 150px;
+    height: 35px;
+    background: #3246D3;
+    box-shadow: 5px 5px 20px rgba(50, 70, 211, 0.4);
+    border-radius: 6px;
+    color: white;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+
+.ajouts .liste-ajouts .ligne .download button.tel {
+    display: none;
+    width: 35px;
+    height: 35px;
+}
+
+.ajouts .liste-ajouts .ligne .download button.tel-sup {
+    display: none;
+    width: 35px;
+    height: 35px;
+    background: var(--c-error);
+}
+
+.ajouts .liste-ajouts .ligne .download button.sup {
+    width: 150px;
+    height: 35px;
+    background: var(--c-error);
+    box-shadow: 5px 5px 20px rgba(50, 70, 211, 0.4);
+    border-radius: 6px;
+    color: white;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+
+
+@media screen and (max-width:1180px) {
+    .ajouts .liste-ajouts .ligne .date {
+        display: none;
+    }
+}
+
+@media screen and (max-width:950px) {
+    .global {
+        margin-left: 100px;
+        transition: all 0.3s ease-in-out;
+    }
+
+    .barre-recherche form.search .div .barre {
+        width: 300px;
+    }
+}
+
+@media screen and (max-width:755px) {
+    .ajouts .liste-ajouts .ligne .taille {
+        display: none;
+    }
+}
+
+@media screen and (max-width:675px) {
+    .ajouts .liste-ajouts .ligne .download button {
+        display: none;
+    }
+
+    .ajouts .liste-ajouts .ligne .download button.tel {
+        display: block;
+    }
+
+    .ajouts .liste-ajouts .ligne .download button.tel-sup {
+        display: block;
+    }
+}
