--- a/css/profil.css
+++ b/css/profil.css
@@ -1,131 +1,75 @@
 @import url('initialisations.css');
 
-.barre-recherche {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    position: relative;
-}
-
-.barre-recherche form.search {
-    margin: auto;
-    display: flex;
-    width: 100%;
-    gap: 30px;
-}
-
-.barre-recherche form.search .div {
-    position: relative;
-}
-
-.barre-recherche form.search .div .barre {
-    width: 500px;
-    height: 55px;
-    background: #FFFFFF;
-    padding: 20px;
-    padding-left: 50px;
-    box-shadow: 5px 5px 20px rgba(199, 199, 199, 0.4);
-    border-radius: 10px;
-    outline: none;
-    border: none;
-}
-.barre-recherche form.search .div .barre:focus {
-    outline: solid 2px var(--c-blue);
-}
-
-
-.barre-recherche form.search .div .icon {
-    position: absolute;
-    top: 50%;
-    left: 20px;
-    transform: translateY(-50%);
-    color: var(--c-grey);
-}
-
-.barre-recherche form.search .div .btn-search {
-    position: absolute;
-    top: 50%;
-    right: 10px;
-    transform: translateY(-50%);
-    width: 40px;
-    height: 40px;
-    background: var(--c-blue);
-    cursor: pointer;
-    transition: all 0.3s ease;
-    border: none;
-    outline: none;
-    border-radius: 5px;
-    color: white;
-    font-size: 25px;
-}
-
-
-.barre-recherche form.search .btn-search:hover {
-    background-color: var(--c-dark-blue);
-    transition: all 0.3s ease;
-}
-
-.barre-recherche .profil {
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: flex;
-    padding: 5px;
-    gap: 8px;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.barre-recherche .profil .message {
-    width: 30px;
-    height: 30px;
-    position: relative;
-}
-
-.barre-recherche .profil .message svg {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    cursor: pointer;
-}
-
-.barre-recherche .profil .settings {
-    width: 30px;
-    height: 30px;
-    position: relative;
-}
-
-.barre-recherche .profil .settings svg {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    cursor: pointer;
-}
-
-.barre-recherche .profil .avatar {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-}
-
-.barre-recherche .profil .avatar img {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    object-fit: cover;
-    cursor: pointer;
-}
-
 .global .compte {
     margin: 20px auto 0;
     display: flex;
     flex-direction: column;
     width: 100%;
+    padding: 1rem;
 }
 
 .global .compte .titre {
     padding: 1rem;
+}
+
+.banniere {
+    margin: 0 auto;
+    width: 100%;
+    height: 300px;
+    display: flex;
+    border-radius: 20px;
+    background-color: white;
+    position: relative;
+}
+
+.banniere img {
+    margin: auto;
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+.avatar {
+    position: absolute;
+    bottom: -80px;
+    left: 80px;
+    width: 160px;
+    height: 160px;
+    border: 10px solid #F6F6FF;
+    border-radius: 80px;
+    background-color: white;
+}
+
+.avatar img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 150px;
+    height: 150px;
+    border-radius: 80px;
+}
+
+.details {
+    margin: 0 auto;
+    width: 100%;
+    padding: 10px;
+    display: flex;
+}
+
+.details .pseudo {
+    margin: 0 0 0 240px;
+    font-weight: 600;
+    font-size: 30px;
+}
+
+.bio {
+    margin: 30px 0 0 0;
+    width: 100%;
+    max-width: 700px;
+    padding: 1rem;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 5px 5px 20px rgba(199, 199, 199, 0.4);
 }
