--- a/css/addFile.css
+++ b/css/addFile.css
@@ -63,15 +63,32 @@ body {
     transition: 0.3s ease;
 }
 
-input[type='file'] {
-    
-}
-
-label.file {
+.button-wrapper {
+    position: relative;
     width: 100%;
-    background-color: #f6f6f9;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem;
+}
+  
+.button-wrapper span.label {
+    position: relative;
+    z-index: 0;
+    display: inline-block;
+    width: 100%;
+    background: #f6f6f9;
+    cursor: pointer;
+    padding: 15px;
+    font-size: 13px;
+    color: #707071;
     border-radius: 5px;
+}
+  
+#upload {
+    display: inline-block;
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 50px;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    cursor: pointer;
 }
