--- a/css/profil.css
+++ b/css/profil.css
@@ -56,6 +56,8 @@
     width: 100%;
     padding: 10px;
     display: flex;
+    justify-content: space-between;
+    gap: 20px;
 }
 
 .details .pseudo {
@@ -63,6 +65,31 @@
     font-weight: 600;
     font-size: 30px;
 }
+
+.details .settings {
+    margin: 5px 0;
+    padding: 1rem;
+    height: 45px;
+    color: white;
+    display: flex;
+    background-color: var(--c-blue);
+    font-weight: 700;
+    font-size: 15px;
+    border-radius: 6px;
+    text-align: center;
+    align-items: center;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    box-shadow: 5px 5px 20px rgba(50, 70, 211, 0.4);
+    transition: 0.3s ease;
+}
+
+.details .settings:hover {
+    box-shadow: none;
+    transition: 0.3s ease;
+}
+
 
 .bio {
     margin: 30px 0 0 0;
