--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -4,11 +4,11 @@ aside {
     position: fixed;
     top: 0;
     left: 0;
-    width: 300px;
+    width: 280px;
     height: 100vh;
     display: flex;
     flex-direction: column;
-    background-color: white;
+    background-color: transparent;
     transition: all 0.3s ease-in-out;
 }
 
@@ -28,31 +28,31 @@ aside .titre h1 span {
 }
 
 aside ul.list {
-    margin: 150px auto 0;
+    margin: 120px auto 0;
     width: 100%;
-    padding: 1rem;
+    height: 100%;
+    padding: 2rem;
     display: flex;
     flex-direction: column;
-    gap: 2vh;
+    gap: 10px;
 }
 
 ul.list .list-item {
-    margin: auto;
     display: flex;
-    width: 90%;
-    height: 70px;
+    width: 100%;
+    height: 50px;
     align-items: center;
     border-radius: 10px;
     color: white;
     position: relative;
 }
 
-ul.list .btn-deco {
-    position: absolute;
-    width: 80%;
-    left: 50%;
-    transform: translate(-50%);
-    bottom: 5%;
+ul.list .list-item.btn-deco {
+    margin-top: auto;
+}
+
+ul.list .list-item.btn-deco:hover {
+    background: var(--c-error);
 }
 
 ul.list .list-item.active:after {
@@ -119,6 +119,10 @@ ul.list .list-item a .lien {
     aside .titre h1 {
         font-size: 20px;
         transition: all 0.3s ease-in-out;
+    }
+
+    aside ul.list {
+        padding: 1rem;
     }
 
     ul.list .list-item a .lien {
