--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -4,7 +4,7 @@ aside {
     position: fixed;
     top: 0;
     left: 0;
-    width: 280px;
+    width: 250px;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -12,26 +12,36 @@ aside {
     transition: all 0.3s ease-in-out;
 }
 
+aside .titre {
+    margin: 50px auto 0;
+    display: flex;
+    width: 100%;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+aside .titre img {
+    width: 40px;
+    height: 38px;
+}
+
 aside .titre h1 {
-    position: absolute;
-    top: 45px;
-    left: 50%;
-    transform: translate(-50%);
     text-transform: uppercase;
     transition: all 0.3s ease-in-out;
 }
 
 aside .titre h1 span {
-    background: var(--c-linear-gradient);
+    background: var(--c-blue);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
 aside ul.list {
-    margin: 120px auto 0;
+    margin: 50px auto 0;
     width: 100%;
     height: 100%;
-    padding: 2rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -58,12 +68,11 @@ ul.list .list-item.btn-deco:hover {
 ul.list .list-item.active:after {
     content: "";
     position: absolute;
-    right: -30px;
+    right: -15px;
     width: 5px;
-    height: 100%;
+    height: 50%;
     background: var(--c-dark-blue);
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
+    border-radius: 10px;
 }
 
 ul.list .list-item.active {
@@ -117,12 +126,7 @@ ul.list .list-item a .lien {
     }
 
     aside .titre h1 {
-        font-size: 20px;
-        transition: all 0.3s ease-in-out;
-    }
-
-    aside ul.list {
-        padding: 1rem;
+        display: none;
     }
 
     ul.list .list-item a .lien {
