--- a/css/initialisations.css
+++ b/css/initialisations.css
@@ -13,6 +13,7 @@ body {
     margin: 0 auto;
     display: flex;
     background-color: var(--c-background);
+    position: relative;
 }
 
 .global {
