--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -19,6 +19,7 @@ aside .titre {
     gap: 10px;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 aside .titre img {
