--- a/css/initialisations.css
+++ b/css/initialisations.css
@@ -26,6 +26,85 @@ body {
     padding: 1rem;
 }
 
+header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+header form.search {
+    margin: auto;
+    display: flex;
+    width: 100%;
+    gap: 30px;
+}
+
+header form.search .div_input {
+    position: relative;
+}
+
+header form.search .div_input .barre {
+    width: 500px;
+    height: 55px;
+    background: #FFFFFF;
+    padding: 20px;
+    padding-left: 50px;
+    box-shadow: 5px 5px 20px rgba(199, 199, 199, 0.4);
+    border-radius: 10px;
+    outline: none;
+    border: none;
+}
+header form.search .div_input .barre:focus {
+    outline: solid 2px var(--c-blue);
+}
+
+
+header form.search .div_input .icon {
+    position: absolute;
+    top: 50%;
+    left: 20px;
+    transform: translateY(-50%);
+    color: var(--c-grey);
+}
+
+header form.search .div_input .btn-search {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    width: 40px;
+    height: 40px;
+    background: var(--c-blue);
+    cursor: pointer;
+    transition: all 0.3s ease;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    color: white;
+    font-size: 25px;
+}
+
+
+header form.search .btn-search:hover {
+    background-color: var(--c-dark-blue);
+    transition: all 0.3s ease;
+}
+
+header .avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+header .avatar img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+    cursor: pointer;
+}
+
 @media screen and (max-width:950px) {
     .global {
         margin-left: 100px;
