--- a/css/profil.css
+++ b/css/profil.css
@@ -1,7 +1,7 @@
 @import url('initialisations.css');
 
 .global .compte {
-    margin: 20px auto 0;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -17,7 +17,7 @@
     width: 100%;
     height: 300px;
     display: flex;
-    border-radius: 20px;
+    border-radius: 15px;
     background-color: white;
     position: relative;
 }
@@ -27,22 +27,25 @@
     width: 100%;
     height: 300px;
     object-fit: cover;
-    border-radius: 20px;
+    object-position: center center;
+    border-radius: 15px;
 }
 
 .avatar {
     position: absolute;
-    bottom: -80px;
+    bottom: -90px;
     left: 80px;
     width: 160px;
     height: 160px;
     border: 10px solid #F6F6FF;
     border-radius: 80px;
     background-color: white;
+    cursor: pointer;
 }
 
 .avatar img {
     position: absolute;
+    z-index: 50;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -51,45 +54,194 @@
     border-radius: 80px;
 }
 
+.avatar .avatar_hover {
+    position: absolute;
+    z-index: 51;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 0;
+    height: 0;
+    border-radius: 80px;
+    background-color: rgba(25, 0, 255, 0.589);
+    transition: 0.2s ease;
+}
+
+.avatar .avatar_hover span {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    transition: 0.5s ease;
+}
+
+.avatar:hover .avatar_hover {
+    width: 150px;
+    height: 150px;
+    transition: 0.2s ease;
+}
+
+.avatar:hover .avatar_hover span {
+    display: flex;
+    transition: 0.5s ease;
+}
+
 .details {
     margin: 0 auto;
     width: 100%;
     padding: 10px;
     display: flex;
-    justify-content: space-between;
-    gap: 20px;
+    flex-wrap: wrap;
+    column-gap: 50px;
 }
 
 .details .pseudo {
-    margin: 0 0 0 240px;
+    margin: 10px 0 0 240px;
     font-weight: 600;
     font-size: 30px;
 }
 
+.details .loca {
+    font-style: italic;
+    font-weight: 300;
+    font-size: 15px;
+    color: #999999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.details .profil_btn {
+    margin: 5px 0 5px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+
 .details .settings {
-    margin: 5px 0;
-    padding: 1rem;
-    height: 45px;
+    z-index: 50;
+    padding: 10px;
+    height: 40px;
     color: white;
     display: flex;
     background-color: var(--c-blue);
     font-weight: 700;
     font-size: 15px;
-    border-radius: 6px;
+    border-radius: 3px;
     text-align: center;
     align-items: center;
     outline: none;
     border: none;
     cursor: pointer;
-    box-shadow: 5px 5px 20px rgba(50, 70, 211, 0.4);
-    transition: 0.3s ease;
+    position: relative;
 }
 
-.details .settings:hover {
-    box-shadow: none;
-    transition: 0.3s ease;
+.details .settings::before {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background-color: #4f3bff;
+    transition: 0.2s ease-in-out;
+    border-radius: 3px;
 }
 
+.details .settings:hover::before {
+    width: 100%;
+    transition: 0.5s;
+    transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+}
+
+.photoChanger {
+    position: fixed;
+    z-index: 55;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    max-width: 450px;
+    height: 450px;
+    padding: 1rem;
+    background-color: var(--c-white);
+    box-shadow: 1px 1px 22px rgba(0, 0, 0, 0.4);
+    border-radius: 15px;
+    display: none;
+    flex-direction: column;
+}
+
+.photoChanger span {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    cursor: pointer;
+    color: var(--c-blue);
+}
+
+.photoChanger span:hover {
+    color: red;
+}
+
+.photoChanger .ancienne_photo {
+    margin: 0 auto;
+    position: relative;
+    width: 280px;
+    height: 280px;
+    border: dashed 2px var(--c-blue);
+    border-radius: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.photoChanger .ancienne_photo #preview {
+    position: absolute;
+    z-index: 51;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 95%;
+}
+
+.photoChanger .ancienne_photo img {
+    width: 95%;
+    object-fit: cover;
+    object-position: center center;
+}
+
+.form_photo {
+    margin: 30px auto 0;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.form_photo input {
+    margin: auto;
+}
+
+.form_photo input[type='submit'] {
+    margin: 10px auto 0;
+    display: flex;
+    width: 100%;
+    max-width: 900px;
+    height: 50px;
+    background-color: white;
+    color: white;
+    text-transform: uppercase;
+    font-weight: 500;
+    outline: none;
+    border: none;
+    background: var(--c-blue);
+    border-radius: 10px;
+    cursor: pointer;
+    justify-content: center;
+}
 
 .bio {
     margin: 30px 0 0 0;
@@ -99,4 +251,90 @@
     background-color: white;
     border-radius: 10px;
     box-shadow: 5px 5px 20px rgba(199, 199, 199, 0.4);
+}
+
+
+@media (max-width:680px) {
+    .avatar {
+        bottom: -80px;
+        left: 20px;
+    }
+
+    .details {
+        margin: 0 0 0 180px;
+        width: calc(100% - 180px);
+        position: relative;
+    }
+
+    .details .pseudo {
+        margin: 0;
+        font-weight: 600;
+        font-size: 30px;
+    }
+}
+
+@media (max-width:525px) {
+    .avatar {
+        bottom: -60px;
+        left: 20px;
+        width: 120px;
+        height: 120px;
+    }
+    
+    .avatar img {
+        width: 110px;
+        height: 110px;
+    }
+
+    .avatar:hover .avatar_hover {
+        width: 110px;
+        height: 110px;
+    }
+
+    .details {
+        margin: 0;
+        width: 100%;
+        position: relative;
+    }
+
+    .details .pseudo {
+        margin: 0 0 0 150px;
+        font-size: 30px;
+    }
+
+    .details .profil_btn {
+        position: absolute;
+        top: 80px;
+        left: 0;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media (max-width:495px) {
+    .details .loca {
+        display: none;
+    }
+
+    .details .pseudo {
+        margin: 0 0 0 140px;
+        font-size: 20px;
+    }
+
+    .photoChanger {
+        width: 270px;
+        height: 330px;
+    }
+
+    .photoChanger .ancienne_photo {
+        width: 150px;
+        height: 150px;
+    }
+
+    .form_photo input[type=file] {
+        width: 200px;
+        height: 40px;
+    }
 }
