--- a/css/pageFolder.css
+++ b/css/pageFolder.css
@@ -340,7 +340,7 @@
     background-color: white;
     border-radius: 10px;
     gap: 10px;
-    padding: 5px;
+    padding: 10px;
     box-shadow: 5px 5px 20px rgba(153, 153, 153, 0.4);
 }
 
@@ -366,7 +366,7 @@
 }
 
 .ajouts .liste-ajouts .ligne .titre {
-    margin: auto;
+    margin: auto auto auto 0;
 }
 
 .ajouts .liste-ajouts .ligne .taille {
@@ -379,47 +379,58 @@
 }
 
 .ajouts .liste-ajouts .ligne .boutons {
-    margin: auto;
+    margin: auto 0 auto auto;
     display: flex;
-    gap: 15px;
+    gap: 10px;
 }
 
-.ajouts .liste-ajouts .ligne .boutons input {
-    width: max-content;
-    padding: 10px;
+.ajouts .liste-ajouts .ligne .boutons label {
+    display: flex;
+    cursor: pointer;
     background: #3246D3;
     box-shadow: 5px 5px 20px rgba(50, 70, 211, 0.4);
+    padding: 10px;
     border-radius: 6px;
     color: white;
-    outline: none;
-    border: none;
-    cursor: pointer;
-    transition: 0.3s ease;
-    display: flex;
+    position: relative;
     justify-content: center;
     align-items: center;
+    transition: 0.2s ease;
 }
 
-.ajouts .liste-ajouts .ligne .boutons input.supprimer {
-    width: max-content;
-    padding: 10px;
+.ajouts .liste-ajouts .ligne .boutons label.supprimer {
+    display: flex;
+    cursor: pointer;
     background: var(--c-error);
     box-shadow: 5px 5px 20px rgba(207, 0, 0, 0.4);
+    padding: 10px;
     border-radius: 6px;
     color: white;
-    outline: none;
-    border: none;
-    cursor: pointer;
-    transition: 0.3s ease;
-    display: flex;
+    position: relative;
     justify-content: center;
     align-items: center;
+    transition: 0.2s ease;
 }
 
-.ajouts .liste-ajouts .ligne .boutons input:hover {
+.ajouts .liste-ajouts .ligne .boutons label:hover {
     box-shadow: none;
     transition: 0.2s ease;
 }
+
+.ajouts .liste-ajouts .ligne .boutons input[type="submit"] {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+.ajouts .liste-ajouts .ligne .boutons label .dl_tel, .ajouts .liste-ajouts .ligne .boutons label .sup_tel {
+    display: none;
+}
+
 
 
 
@@ -439,12 +450,12 @@
     }
 }
 
-/* @media screen and (max-width:675px) {
-    .custom-label .dl, .custom-label .sup {
-        display: none;
+@media screen and (max-width:675px) {
+    .ajouts .liste-ajouts .ligne .boutons label .dl_tel, .ajouts .liste-ajouts .ligne .boutons label .sup_tel {
+        display: block;
     }
 
-    .custom-label .dl_tel, .custom-label .sup_tel {
-        display: inline-block;
+    .ajouts .liste-ajouts .ligne .boutons label .dl, .ajouts .liste-ajouts .ligne .boutons label .sup {
+        display: none;
     }
-} */
+}
