--- a/css/initialisations.css
+++ b/css/initialisations.css
@@ -105,6 +105,45 @@ header .avatar img {
     cursor: pointer;
 }
 
+.popup {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #1a1b2daf;
+    z-index: 99;
+    padding: 1rem;
+}
+
+.pop {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 100%;
+    max-width: 600px;
+    padding: 2rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    background-color: white;
+    box-shadow: 5px 5px 20px rgba(153, 153, 153, 0.4);
+}
+
+.pop input {
+    width: 100%;
+    margin: 15px auto;
+    height: 50px;
+    border: none;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    color: var(--c-white);
+}
+
 @media screen and (max-width:950px) {
     .global {
         margin-left: 100px;
